--- a/Hopeline/ClientApp/Hopeline/src/app/app.component.html
+++ b/Hopeline/ClientApp/Hopeline/src/app/app.component.html
@@ -14,6 +14,14 @@
         <a class="nav-link" routerLink="communities">Communities</a>
       </li>
     </ul>
+    <ul class="navbar-nav" style="float:right">
+      <li class="nav-item">
+        <a class="nav-link" routerLink="mrc">Resource Category Manage</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" routerLink="mr">Resource Manage</a>
+      </li>
+    </ul>
   </div>
 </nav>
 
