--- a/Hopeline/ClientApp/Hopeline/src/styles.css
+++ b/Hopeline/ClientApp/Hopeline/src/styles.css
@@ -17,3 +17,150 @@
 .alignr{
   text-align:right;
 }
+.inline {
+  display: inline-block;
+}
+.icon-size {
+  width: 25px;
+  height: 25px;
+}
+.settingBar {
+  height: auto;
+  width: 100%;
+  background-color: whitesmoke;
+  overflow: hidden;
+  padding:10px;
+  margin-bottom: 10px;
+}
+
+.inputBar {
+  border-bottom-color: #A2C0E6;
+  border-bottom-width: thin;
+  border-top: hidden;
+  border-left: hidden;
+  border-right: hidden;
+  outline: none;
+  background-color: whitesmoke;
+}
+
+.inputBarWhite {
+  border-bottom-color: #A2C0E6;
+  border-bottom-width: thin;
+  border-top: hidden;
+  border-left: hidden;
+  border-right: hidden;
+  outline: none;
+  background-color: white;
+}
+
+.head{
+  margin-top:10px;
+  margin-bottom:10px;
+}
+
+.nobdrbtn {
+  border: none;
+  background-color: white;
+  outline: none;
+  cursor: pointer;
+}
+  .nobdrbtn:hover {
+    border: none;
+    background-color: #A2C0E6;
+    outline: none;
+    cursor: pointer;
+  }
+  .nobdrbtn:active {
+    border: none;
+    background-color: white;
+    outline: none;
+    cursor: pointer;
+  }
+
+  .nobdrbtn:disabled {
+    border: none;
+    background-color: white;
+    outline: none;
+    cursor: no-drop;
+  }
+
+    .nobdrbtn:disabled .shadowbtn {
+      border: none;
+      background-color: white;
+      outline: none;
+      cursor: no-drop;
+    }
+
+      .nobdrbtn:disabled .shadowbtn:hover {
+        border: none;
+        background-color: white;
+        outline: none;
+        cursor: no-drop;
+        background-color: #E1E1E1;
+      }
+/*Toggle button*/
+.switch {
+  position: relative;
+  display: inline-block;
+  width: 30px;
+  height: 17px;
+}
+
+  .switch input {
+    opacity: 0;
+    width: 0;
+    height: 0;
+  }
+
+.slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #ccc;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+  .slider:before {
+    position: absolute;
+    content: "";
+    height: 13px;
+    width: 13px;
+    left: 2px;
+    bottom: 2px;
+    background-color: white;
+    -webkit-transition: .4s;
+    transition: .4s;
+  }
+
+input:checked + .slider {
+  background-color: #2196F3;
+}
+
+input:focus + .slider {
+  box-shadow: 0 0 1px #2196F3;
+}
+
+input:checked + .slider:before {
+  /*-webkit-transform: translateX(26px);
+  -ms-transform: translateX(26px);*/
+  transform: translateX(13px);
+}
+
+/* Rounded sliders */
+.slider.round {
+  border-radius: 34px;
+}
+
+  .slider.round:before {
+    border-radius: 50%;
+  }
+/*Toggle button ends*/
+
+button:disabled{
+  cursor:no-drop;
+}
+
